--- a/motivatie2.html
+++ b/motivatie2.html
@@ -3,20 +3,16 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" type="text/css" href="opmaak/opmaakalt.css">
+	<link rel="stylesheet" type="text/css" href="opmaak/motivatie2.css">
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Aldrich&display=swap" rel="stylesheet">
-	<title>Document</title>
+	<title>Motivatie 2</title>
 </head>
 <body>
-	<h1>Mijn motivatieposters</h1>
-	<div class="eerstefoto">
-		<a href="motivatie1.html"><img src="afbeeldingen/basketball-7078441_1280.jpg" target="_blank"></a>
-	</div>
-
-	<div class="tweedefoto">
-		<a href="motivatie2.html"><img src="afbeeldingen/car-1281698_1280.jpg" target="_blank"></a>
+	<div class="opmaakpagina">
+		<img src="afbeeldingen/car-1281698_1280.jpg">
+		<h1>Money is fuel for the <strong>journey</strong>, not the <strong>destination</strong></h1>
 	</div>
 </body>
 </html>
