--- a/index.html
+++ b/index.html
@@ -7,16 +7,21 @@
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Aldrich&display=swap" rel="stylesheet">
-	<title>Document</title>
+	<title>Motivatieposters</title>
 </head>
 <body>
 	<h1>Mijn motivatieposters</h1>
+	<h3>(scroll naar onder)</h3>
 	<div class="eerstefoto">
 		<a href="motivatie1.html"><img src="afbeeldingen/basketball-7078441_1280.jpg" target="_blank"></a>
 	</div>
 
 	<div class="tweedefoto">
 		<a href="motivatie2.html"><img src="afbeeldingen/car-1281698_1280.jpg" target="_blank"></a>
+	</div>
+
+	<div class="derdefoto">
+		<a href="motivatie3.html"><img src="afbeeldingen/lopen.jpg" target="_blank"></a>
 	</div>
 </body>
 </html>
