--- a/motivatie3.html
+++ b/motivatie3.html
@@ -7,13 +7,12 @@
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Aldrich&display=swap" rel="stylesheet">
-	<title>Motivatie 1</title>
+	<title>Motivatie 3</title>
 </head>
 <body>
 	<div class="opmaakpagina">
-		<img src="afbeeldingen/basketball-7078441_1280.jpg">
-		<p><strong>never say never, because limits, like <strong>fears</strong>, are often just an</strong></p>
-		<h1><strong>illusion</strong></h1>
+		<img src="afbeeldingen/lopen.jpg">
+		<p><strong id="rood">Never</strong> back down, <strong id="geel">never</strong> give up</p>
 	</div>
 </body>
 </html>
