--- a/index.html
+++ b/index.html
@@ -11,17 +11,13 @@
 </head>
 <body>
 	<h1>Mijn motivatieposters</h1>
-	<h3>(scroll naar onder)</h3>
-	<div class="eerstefoto">
-		<a href="motivatie1.html"><img src="afbeeldingen/basketball-7078441_1280.jpg" target="_blank"></a>
-	</div>
-
-	<div class="tweedefoto">
-		<a href="motivatie2.html"><img src="afbeeldingen/car-1281698_1280.jpg" target="_blank"></a>
-	</div>
-
-	<div class="derdefoto">
-		<a href="motivatie3.html"><img src="afbeeldingen/lopen.jpg" target="_blank"></a>
+		<div class="opmaakposter">
+			<a href="motivatie1.html"><img class="opmaakafbeelding" src="afbeeldingen/basketball-7078441_1280.jpg" target="_blank"></a>
+		
+				<a href="motivatie2.html"><img class="opmaakafbeelding" src="afbeeldingen/car-1281698_1280.jpg" target="_blank"></a>
+		
+				<a href="motivatie3.html"><img class="opmaakafbeelding" src="afbeeldingen/lopen.jpg" target="_blank"></a>
+		</div>
 	</div>
 </body>
 </html>
